--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li><a href="#">Intro</a></li>
           <li><a href="#bestSeller">Best Seller</a></li>
           <li><a href="#">Recommendations</a></li>
-          <li><a href="#">Reviews</a></li>
+          <li><a href="#Reviews">Reviews</a></li>
         </ul>
       </nav>
       
@@ -87,6 +87,47 @@
                 </div>
             </div>
         </div>
+
+        <hr id="Reviews">
+          <h2>Reviews</h2>
+          <p>What people thinks about Us</p>
+          <div class="bestSeller">
+              <div class="t1">
+                  <div class="tt1">
+                    <img class="tt1" src="images/Aman-Dhattarwal.jpg" alt="">
+                  </div>
+                  <div class="content">
+                      <h3>Aman Dhattarwal</h3>
+                      <p>
+                        I was able to have a front-row seat when the UTSAV Cancer Foundation first gathered in our boardroom at CrossFirst Bank. Seeing the quality of people who worked tirelessly to create the UTSAV Cancer Foundation was very inspiring and a testament to its mission of serving cancer patients throughout the state of Kansas.
+                      </p>
+                  </div>
+              </div>
+              <div class="t2">
+                  <div class="tt2">
+                    <img class="tt1" src="images/Aman-Dhattarwal.jpg" alt="">
+                  </div>
+                  <div class="content">
+                      <h3>Aman Dhattarwal</h3>
+                      <p>
+                          This is a dummy NGO website. I have made this website using HTML, CSS and Bootstrap.
+                      </p>
+                  </div>
+              </div>
+              <div class="t3">
+                  <div class="tt3">
+                      <img class="tt1" src="images/Aman-Dhattarwal.jpg" alt="">
+                  </div>
+                  <div class="content">
+                      <h3>Aman Dhattarwal</h3>
+                      <p>
+                          This is a short story written by me in stage play format. The story is based on hidden love between two children named Sumit and Shanvi.
+                      </p>
+                  </div>
+              </div>
+          </div>
+
+        
 
         <div class="footer">
           <div class="back">
