--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-  <link rel="icon" href="https://th.bing.com/th/id/OIP.TA5FbDH2vmeQxem5Z4ppHQHaHa?pid=ImgDet&rs=1">
-  <link rel="shortcut icon" href="https://th.bing.com/th/id/OIP.TA5FbDH2vmeQxem5Z4ppHQHaHa?pid=ImgDet&rs=1"
+  <link rel="icon" href="images/logo.png">
+  <link rel="shortcut icon" href="images/logo.png"
     type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
     rel="stylesheet">
-  <title>Bookshop</title>
+  <title>Geetanjali</title>
 </head>
 
 <body>
@@ -283,22 +283,20 @@
         <img class="back_img" src="images/back.png"></a>
     </div>
     <div class="links">
-      <a href="mailto:demo@gmail.com" target="_blank" rel="noopener noreferrer">
-        <img class="icon_img"
-          src="https://cdn.imgbin.com/13/23/21/imgbin-gmail-email-logo-g-suite-google-gmail-gmail-icon-Wx6AacCLBd7kM75xsEpgH4xpR.jpg">
-        Email</a>
-      <a href="tel:+91 1234567890" target="_blank" rel="noopener noreferrer">
-        <img class="icon_img" src="http://icons.iconarchive.com/icons/iynque/ios7-style/1024/Phone-icon.png"> Phone</a>
-      <a href="https://www.linkedin.com/in/demo5" target="_blank" rel="noopener noreferrer">
-        <img class="icon_img" src="images/linkedin.png"> LinkedIn</a>
-      <a href="https://www.facebook.com/demo" target="_blank" rel="noopener noreferrer">
-        <img class="icon_img" src="https://cdn-icons-png.flaticon.com/512/4406/4406220.png"> Facebook</a>
-    </div>
+      <a href="mailto:ujjawalrr@gmail.com" target="_blank" rel="noopener noreferrer">
+          <img class="icon_img" src="https://cdn.imgbin.com/13/23/21/imgbin-gmail-email-logo-g-suite-google-gmail-gmail-icon-Wx6AacCLBd7kM75xsEpgH4xpR.jpg"> Email</a>
+      <a href="tel:+91 6202230797" target="_blank" rel="noopener noreferrer">
+          <img class="icon_img" src="http://icons.iconarchive.com/icons/iynque/ios7-style/1024/Phone-icon.png"> Phone</a>
+      <a href="https://www.linkedin.com/in/ujjawal-kumar-45a431228/" target="_blank" rel="noopener noreferrer">
+          <img class="icon_img" src="images/linkedin.png"> LinkedIn</a>
+      <a href="https://www.facebook.com/profile.php?id=100012980770787" target="_blank" rel="noopener noreferrer">
+          <img class="icon_img" src="https://cdn-icons-png.flaticon.com/512/4406/4406220.png"> Facebook</a>
+  </div>
     <div class="links links_foot">
       <a href="#" target="_blank" rel="noopener noreferrer">Terms & Conditions</a>
       <a href="#" target="_blank" rel="noopener noreferrer">Privacy Policy</a>
     </div>
-    <p class="footer-content">© 2022 Siddhartha Kumar @ IIT Kharagpur</p>
+    <p class="footer-content">© 2022 Ujjawal Kumar @ IIT Kharagpur</p>
   </div>
 </body>
 
